2A/05_Projet_GL/src/test/deca/syntax/valid/Objet/30_convFloattoInt.deca
// Description:
//    Programme : conv float to int
// Resultats:
//      Programme correcte syntaxiquement et faux contextuellement 
//
// Historique:
//    cree le 18/01/2024
{
    float y = 0.5,x;
    x = (int)(y);
}