2A/05_Projet_GL/src/test/deca/syntax/invalid/Objet/07_DeclFieldSetSansField.deca
// Description:
//    Programme declaration d'un champ sans nom.
// Resultats:
//      Programme incorrecte syntaxiquement : 2:18: missing IDENT at ';', il manque le nom du champ entre int et ;
//
// Historique:
//    cree le 16/01/2023
class B{
    protected int ;
}